--- a/Source/Falcon/src/Falcon.Web.Api/Web.Debug.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.Debug.config
@@ -8,12 +8,21 @@
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
     finds an attribute "name" that has a value of "MyDB".
     
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
+
   -->
+
+  <connectionStrings>
+    
+    <add name="DbEntity"
+      connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SocialChimishod;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+
+    <add name="HangFire"
+      connectionString="Data Source=.;Initial Catalog=SocialHangfire;Integrated Security=True"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    
+  </connectionStrings>
+  
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire 
@@ -27,4 +36,5 @@
       </customErrors>
     -->
   </system.web>
+
 </configuration>
