--- a/Source/Falcon/src/Falcon.Web.Api/Web.NovinDevDeploy.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.NovinDevDeploy.config
@@ -2,4 +2,21 @@
 <!-- For more information on using app.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 <!-- In case configuration is not the root element, replace it with root element in source configuration file -->
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+
+
+  <connectionStrings>
+    <add name="DbEntity"
+      connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=192.168.182.22,4542;Initial Catalog=SocialChimishodDev;Persist Security Info=True;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+
+    <add name="HangFire"
+      connectionString="Data Source=192.168.182.22,4542;Initial Catalog=SocialHangfireDev;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>  
+
+  <system.web>
+    <compilation xdt:Transform="RemoveAttributes(debug)" />
+  </system.web>
+  
+  
 </configuration>
