--- a/Source/Falcon/src/Falcon.Web.Api/Web.Release.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.Release.config
@@ -14,6 +14,20 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+
+  <connectionStrings>
+
+    <add name="DbEntity"
+      connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SocialChimishod;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+
+    <add name="HangFire"
+      connectionString="Data Source=.;Initial Catalog=SocialHangfire;Integrated Security=True"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+
+  </connectionStrings>
+  
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
