--- a/Source/Falcon/src/Falcon.Web.Api/Web.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.config
@@ -59,26 +59,13 @@
   
   <connectionStrings>
 
-
-    <!--Online NovinTech VPS Connection Release -->
-    <add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=192.168.182.22,4542;Initial Catalog=SocialChimishodLive;Persist Security Info=True;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="HangFire" connectionString="Data Source=192.168.182.22,4542;Initial Catalog=SocialHangfire;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true" />
-    
-    <!--Online NovinTech VPS Connection-->
-
-    <!--<add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=87.107.135.252,4542;Initial Catalog=SocialChimishodLive;Persist Security Info=True;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="HangFire" connectionString="Data Source=87.107.135.252,4542;Initial Catalog=SocialHangfire;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true" />-->
+    <add name="DbEntity" connectionString="" />
+    <add name="HangFire" connectionString="" />
     
     <!--Online Tegra VPS Connection-->
     
     <!--<add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=148.251.102.212,4542;Initial Catalog=SocialChimishod;Persist Security Info=True;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="HangFire" connectionString="Data Source=148.251.102.212,4542;Initial Catalog=SocialHangfire;User ID=Jeb;Password=@@@Visualbasic7;Min Pool Size=0;Max Pool Size=1000;Pooling=true" />-->
-    
-    <!--Local Conncetion-->
-    
-    <!--<add name="DbEntity" connectionString="metadata=res://*/DbModel.WhatIfDataModel.csdl|res://*/DbModel.WhatIfDataModel.ssdl|res://*/DbModel.WhatIfDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SocialChimishod;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="UserDataContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UserDataContext-20170110183041; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UserDataContext-20170110183041.mdf" providerName="System.Data.SqlClient" />
-    <add name="HangFire" connectionString="Data Source=.;Initial Catalog=SocialHangfire;Integrated Security=True" />-->
     
   </connectionStrings>
   <system.web>
